--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <a href="#contact">CONTACT</a>
                 </li>
                 <li class="page-scroll">
-                  <a href="#careers">JOIN</a>
+                  <a class="purple-button" href="#careers">JOIN</a>
                 </li>
               </ul>
         </div>
@@ -61,7 +61,7 @@
       <section id="landing">
         <div class="container-fluid row">
           <div class="col-lg-6">
-            <img src="./img/phone-in-hand.png" alt="Phone in hand" />
+            <img class="phone-img" src="./img/phone-in-hand.png" alt="Phone in hand" />
           </div>
           <div class="col-lg-3 textbox padding-top">
   	            <h2>AUTHENTIC COMMUNICATION</h2>
@@ -133,7 +133,6 @@
       </section>
 
 </div>
-
 
         <script>window.jQuery || document.write('<script src="./js/jquery-1.11.2.min.js"><\/script>')</script>
 
