--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="./css/main.css">
-        <!-- fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> 
         <script src="./js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
     </head>
@@ -30,7 +28,7 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse" role="navigation">
       <div class="container">
           <a class="navbar-brand" href="#scroll-to-top"><img id="logo" src="./img/logo.png" alt="ThinkCapsule"></a>      
           <!-- Navigation Links -->
@@ -43,13 +41,10 @@
                   <a href="#work">Blog</a>
                 </li>
                 <li class="page-scroll">
-                  <a href="#team">TEAM</a>
-                </li>
-                <li class="page-scroll">
                   <a href="#contact">CONTACT</a>
                 </li>
-                <li class="page-scroll">
-                  <a class="purple-button" href="#careers">JOIN</a>
+                <li class="page-scroll purple-button-outer">
+                  <a class="purple-button-inner" href="#careers">JOIN</a>
                 </li>
               </ul>
         </div>
@@ -60,12 +55,12 @@
 
       <section id="landing">
         <div class="container-fluid row">
-          <div class="col-lg-6">
+          <div class="col-lg-4 col-lg-offset-2 col-sm-6">
             <img class="phone-img" src="./img/phone-in-hand.png" alt="Phone in hand" />
           </div>
-          <div class="col-lg-3 textbox padding-top">
+          <div class="col-lg-4 textbox front-page">
   	            <h2>AUTHENTIC COMMUNICATION</h2>
-  	            <p>Secretly like your friends, match when they like you back</p>            
+  	            <p>Secretly like your friends, match when <br> they like you back</p>            
           </div>
       </div>
       </section>
