Corrected navbar linking

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                   <a href="#why">Our Why</a>
                 </li>
                 <li class="page-scroll">
-                  <a href="##blog">Blog</a>
+                  <a href="#blog">Blog</a>
                 </li>
                 <li class="page-scroll">
                   <a href="#contact">Contact</a>
                 </li>
                 <li class="page-scroll purple-button-outer">
-                  <a class="purple-button-inner" href="#careers">Join</a>
+                  <a class="purple-button-inner" href="#join">Join</a>
                 </li>
               </ul>
         </div>
