--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Lucid App Frontend Prototype Demo</title>
+        <title>Lucid</title>
 	<meta name="author" content="ThinkCapsule">
 	<meta name="description" content="Lucid is a dating app"/>
 	<meta name="keywords" content="Lucid,web,web application,development,ios,android,software"/>
@@ -91,6 +91,14 @@
         <div class="row col-lg-12">
           <div class="text-center">
             <h2 class="section-title">OUR WHY</h2>
+              <p>Human connectivity has advanced to unfathomable levels. We can communicate with out friends, family, and even strangers in seconds, at the touch of a button. We can access an infinite amount of information about pretty much anything.</p> 
+              <p>But there is one area of communication that we don't have a solution for: romance.</p> 
+              <p>We have a tendency to not vocalize our true feelings when there is visible risk. There is strong social anxiety covering the ability to take things to the next level with a friend, whether close or not.</p>
+              <p>We have all been here before. You have feelings for someone, or are simply just attracted to them. You would be interesting in exploring your curiosity, but the idea of ruining a friendship, facing rejection, and causing awkward tension is too strong to act on your feelings. </p>
+              <p>This is something that everyone has and will likely continue experiencing. But what if we didn't need to?</p> 
+              <p>We built Lucid to allow people to take control and achieve their romantic dreams. We believe that everyone deserves to communicate their true feelings, so we built a risk free environment for you to do so.</p>  
+              <p>We simply believe that the world is a better place when you share it with the people you love.</p>
+
             <hr>
           </div>
         </div>
