Added email sent text

--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
               <input class="border-radius email-box" type='email' placeholder="Enter Email Address" />
             </div>
               <button class="border-radius email-btn">Get Early Access</button>
+              <div id="emailSentResult">
+                <div class="col-lg-12">
+                  <img id="heart-img" src="./img/filledHeart.png" alt="<3" />
+                </div>
+                <div class="col-lg-12">
+                  <img id="emailSentText" src="./img/emailSentText.png" alt="You are on the waitlist" />
+                </div>
+              </div>
           </div> 
     </section>		           
  		 
@@ -109,11 +117,8 @@
  		 
 
 </div>
-
-        <script>window.jQuery || document.write('<script src="./js/jquery-1.11.2.min.js"><\/script>')</script>
-
+        <script src="./js/jquery-1.11.2.min.js"></script>
         <script src="./js/bootstrap.min.js"></script>
-
         <script src="./js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
