Fixed some changes with email-btn and fonts

--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
         <div class="row">
           <div class="col-lg-4 col-lg-offset-2 col-sm-4">
             <img class="phone-img" src="./img/phone-in-hand.png" alt="Phone in hand" />
-              <div id="scroll-down-overlay"></div>
+              <div id="scroll-down-overlay">
+                  <img class="down-arrow" src="./img/down-arrow.png" />
+              </div>
           </div>
           <div class="col-lg-4 textbox front-page">
-  	            <h2>AUTHENTIC COMMUNICATION</h2>
-  	            <p>Secretly like your friends, match when <br> they like you back</p>            
+  	            <h2 class="front-page-title">AUTHENTIC COMMUNICATION</h2>
+  	            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p>            
           </div>
       </div>
       </section>
