Removed Why section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
        <p>&nbsp;</p>		
   </div>			
             <!-- TEAM SECTION -->		  
-  <section>
+  <!--section>
       <div class="container teaminfo col-lg-12">
         <div class="row col-lg-12">
           <div class="text-center">
@@ -115,7 +115,7 @@
           </div>
         </div>
       </div>
-  </section>		
+  </section-->		
  		 
 
 </div>
