Removed Why section part 2

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
           </div> 
     </section>		           
  		 
-  <div id="why" class="col-lg-12">		
+  <!--div id="why" class="col-lg-12">		
        <p>&nbsp;</p>		
   </div>			
-            <!-- TEAM SECTION -->		  
-  <!--section>
+ 
+  <section>
       <div class="container teaminfo col-lg-12">
         <div class="row col-lg-12">
           <div class="text-center">
