--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="col-lg-4 col-lg-offset-2 col-sm-4">
             <img class="phone-img" src="./img/phone-in-hand.png" alt="Phone in hand" />
               <div id="scroll-down-overlay">
-                  <img class="down-arrow" src="./img/down-arrow.png" />
+                  <a href="#join"><img class="down-arrow" src="./img/down-arrow.png" /></a>
               </div>
           </div>
           <div class="col-lg-4 textbox front-page">
