--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
             <div class="col-lg-12">
               <h2 class="call-to-action">The future of communication is here.</h2>  
             </div>
+            <form id="subscribe">
             <div class="col-lg-4 col-lg-offset-3 border-radius">
-              <input class="border-radius email-box" type='email' placeholder="Enter Email Address" />
+              <input id="email" class="border-radius email-box" type='email' placeholder="Enter Email Address" autofocus required/>
             </div>
-              <button class="border-radius email-btn">Get Early Access</button>
+              <input type="submit" value="Get Early Access" class="border-radius email-btn"/>
               <div id="emailSentResult">
                 <div class="col-lg-12">
                   <img id="heart-img" src="./img/filledHeart.png" alt="<3" />
@@ -89,6 +90,7 @@
                   <img id="emailSentText" src="./img/emailSentText.png" alt="You are on the waitlist" />
                 </div>
               </div>
+              </form>
           </div> 
     </section>		           
  		 
