--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
           <!-- Navigation Links -->
           <div class="collapse navbar-collapse" >
               <ul class="nav navbar-nav navbar-right">
-                <li class="page-scroll">
+                <li class="page-scroll coming-soon">
                   <a href="#why">Our Why</a>
                 </li>
-                <li class="page-scroll">
+                <li class="page-scroll coming-soon">
                   <a href="#blog">Blog</a>
                 </li>
-                <li class="page-scroll">
+                <li class="page-scroll coming-soon">
                   <a href="#contact">Contact</a>
                 </li>
                 <li class="page-scroll purple-button-outer">
@@ -60,7 +60,7 @@
           <div class="col-lg-4 col-lg-offset-2 col-sm-4">
             <img class="phone-img" src="./img/phone-in-hand.png" alt="Phone in hand" />
               <div id="scroll-down-overlay">
-                  <a href="#join"><img class="down-arrow" src="./img/down-arrow.png" /></a>
+                  <a href="#join"><img class="down-arrow" src="./img/arrowdown.svg" /></a>
               </div>
           </div>
           <div class="col-lg-4 textbox front-page">
@@ -79,7 +79,7 @@
             </div>
             <form id="subscribe">
             <div class="col-lg-4 col-lg-offset-3 border-radius">
-              <input id="email" class="border-radius email-box" type='email' placeholder="Enter Email Address" autofocus required/>
+              <input id="email" class="border-radius email-box" type='email' placeholder="Enter Email Address" required/>
             </div>
               <input type="submit" value="Get Early Access" class="border-radius email-btn"/>
               <div id="emailSentResult">
