--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Lucid is a dating app"/>
 	<meta name="keywords" content="Lucid,web,web application,development,ios,android,software"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
+        <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
 
         <link rel="stylesheet" href="./css/bootstrap.min.css"/>
         <link rel="stylesheet" href="./css/main.css"/>
@@ -33,11 +33,9 @@
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="container">
           <a class="navbar-brand" href="#scroll-to-top"><img id="logo" src="./img/logo.png" alt="Lucid"></a>
-          <div class="page-scroll mobile-btn mobile-btn-outer purple-button-outer">
-            <a class="purple-button-inner mobile-btn" href="#join">Join</a>
-          </div>     
+
           <!-- Navigation Links -->
-          <div class="collapse navbar-collapse" >
+          <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li class="page-scroll coming-soon">
                   <a href="#why">Our Why</a>
@@ -52,7 +50,7 @@
                   <a class="purple-button-inner" href="#join">Join</a>
                 </li>
               </ul>
-        </div>
+        </div>   
       </div>
     </nav>
 
@@ -60,6 +58,10 @@
 
       <section id="landing">
         <div class="row">
+          <div class="mobile-front-page col-lg-12">
+            <h2 class="front-page-title">AUTHENTIC COMMUNICATION</h2>
+            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p>      
+          </div>
           <div class="col-lg-4 col-lg-offset-2 col-sm-4">
             <img class="phone-img" src="./img/phone-in-hand.png" alt="Phone in hand" />
           </div>
@@ -78,7 +80,7 @@
 <!-- JOIN -->
     <section id="join">		
          <div class="info">		         	           
-           <div class='row'>
+           <div class='row comms-container'>
             <div class="col-lg-12">
               <h2 class="call-to-action">The future of communication is here.</h2>  
             </div>
@@ -97,6 +99,7 @@
               </div>
               </form>
           </div> 
+        </div>
     </section>		           
  		 
   <!--div id="why" class="col-lg-12">		
