--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <![endif]-->
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="container">
-          <a class="navbar-brand" href="#scroll-to-top"><img id="logo" src="./img/logo.png" alt="Lucid"></a>
-          
+          <a class="navbar-brand" href="#join"><img id="logo" src="./img/logo.png" alt="Lucid"></a>
+
           <!-- Navigation Links -->
           <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
