--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Lucid is a dating app"/>
 	<meta name="keywords" content="Lucid,web,web application,development,ios,android,software"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
+        <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
 
         <link rel="stylesheet" href="./css/bootstrap.min.css"/>
         <link rel="stylesheet" href="./css/main.css"/>
