--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
       <section id="landing">
         <div class="row">
           <div class="mobile-front-page col-lg-12">
-            <h2 class="front-page-title">Safe Communicaton</h2>
+            <h2 class="front-page-title">Communicate Safely</h2>
             <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p>      
           </div>
           <div class="col-lg-4 col-lg-offset-2 col-sm-4">
             <img class="phone-img" src="./img/phone-in-hand.png" alt="Phone in hand" />
           </div>
           <div class="col-lg-4 textbox front-page">
-  	            <h2 class="front-page-title">Safe Communication</h2>
+  	            <h2 class="front-page-title">Communicate Safely</h2>
   	            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p>            
           </div>
           <div class="scroll-down-container">
