--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Lucid</title>
-	<meta name="author" content="ThinkCapsule">
+	<meta name="author" content="Lucid">
 	<meta name="description" content="Lucid is a dating app"/>
 	<meta name="keywords" content="Lucid,web,web application,development,ios,android,software"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
