--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Lucid</title>
-	<meta name="author" content="Lucid">
-	<meta name="description" content="Lucid is a dating app"/>
-	<meta name="keywords" content="Lucid,web,web application,development,ios,android,software"/>
+      	<meta name="author" content="Lucid">
+      	<meta name="description" content="Connection fate through clear communication"/>
+      	<meta name="keywords" content="Lucid,web,web application,development,ios,android,software"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta property="og:url" content="https://belucid.co"/>
+        <meta property="og:title" content="Lucid" />
+        <meta property="og:site_name" content="Lucid" />
+        <meta property="og:description" content="Connection fate through clear communication" />
+        <meta property="og:image" content="./img/"
         <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
 
         <link rel="stylesheet" href="./css/bootstrap.min.css"/>
