Fixed og:image for fb

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta property="og:title" content="Lucid" />
         <meta property="og:site_name" content="Lucid" />
         <meta property="og:description" content="Connection fate through clear communication" />
-        <meta property="og:image" content="./img/"
+        <meta property="og:image" content="https://belucid.co/img/fb-share-img.png"
         <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
 
         <link rel="stylesheet" href="./css/bootstrap.min.css"/>
