--- a/index.html
+++ b/index.html
@@ -65,15 +65,19 @@
       <section id="landing">
         <div class="row">
           <div class="mobile-front-page col-lg-12">
-            <h2 class="front-page-title">Stay Protected</h2>
-            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p>      
+            <h2 class="front-page-title">Wouldn't you like to know?</h2>
+            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p> 
+            <br>
+            <a href="#join"><p class="front-page-subtext">Explore Possibilities</p></a>     
           </div>
           <div class="col-lg-4 col-lg-offset-2 col-sm-4">
             <img class="phone-img" src="./img/phone-in-hand.png" alt="Phone in hand" />
           </div>
           <div class="col-lg-4 textbox front-page">
-  	            <h2 class="front-page-title">Stay Protected</h2>
-  	            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p>            
+  	            <h2 class="front-page-title">Wouldn't you like to know?</h2>
+  	            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p>
+                <br>
+                <a href="#join"><p class="front-page-subtext">Explore Possibilities</p></a>            
           </div>
           <div class="scroll-down-container">
             <div id="scroll-down-overlay">
