--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2 class="front-page-title">Wouldn't you like to know?</h2>
             <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p> 
             <br>
-            <a href="#join"><p class="front-page-subtext">Explore Possibilities</p></a>     
+            <a href="#join"><p class="front-page-subtext">Explore Possibilities.</p></a>     
           </div>
           <div class="col-lg-4 col-lg-offset-2 col-sm-4">
             <img class="phone-img" src="./img/phone-in-hand.png" alt="Phone in hand" />
@@ -77,7 +77,7 @@
   	            <h2 class="front-page-title">Wouldn't you like to know?</h2>
   	            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p>
                 <br>
-                <a href="#join"><p class="front-page-subtext">Explore Possibilities</p></a>            
+                <a href="#join"><p class="front-page-subtext">Explore Possibilities.</p></a>            
           </div>
           <div class="scroll-down-container">
             <div id="scroll-down-overlay">
