Minor edits: Changed front-page and call-to-action

--- a/index.html
+++ b/index.html
@@ -66,18 +66,14 @@
         <div class="row">
           <div class="mobile-front-page col-lg-12">
             <h2 class="front-page-title">Wouldn't you like to know?</h2>
-            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p> 
-            <br>
-            <a href="#join"><p class="front-page-subtext">Explore Possibilities.</p></a>     
+            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p>    
           </div>
           <div class="col-lg-4 col-lg-offset-2 col-sm-4">
             <img class="phone-img" src="./img/phone-in-hand.png" alt="Phone in hand" />
           </div>
           <div class="col-lg-4 textbox front-page">
   	            <h2 class="front-page-title">Wouldn't you like to know?</h2>
-  	            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p>
-                <br>
-                <a href="#join"><p class="front-page-subtext">Explore Possibilities.</p></a>            
+  	            <p class="front-page-text-1">Secretly like your friends, match when <br> they like you back</p>            
           </div>
           <div class="scroll-down-container">
             <div id="scroll-down-overlay">
@@ -92,7 +88,7 @@
          <div class="info">		         	           
            <div class='row comms-container'>
             <div class="col-lg-12">
-              <h2 class="call-to-action">The future of communication is here.</h2>  
+              <h2 class="call-to-action">Explore what's possible.</h2>  
             </div>
             <form id="subscribe">
             <div class="col-lg-4 col-lg-offset-3 border-radius">
