--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div id="arrow" class="col-sm-3">
-                <a href="#contact">down</a>
+                <a class="page-scroll" href="#contact">down</a>
                 </div>
             </div>
         </div>
@@ -80,21 +80,26 @@
 
 
     <section id="contact" class="contact bg-primary">
-        <div class="container">
+        <div class="container" id="icons">
             <ul class="list-inline list-social">
                 <li class="social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <img src="img/instagram.png">
                 </li>
                 <li class="social-facebook">
                     <img src="img/facebook.png">
                 </li>
                 <li class="social-google-plus">
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                   <img src="img/twitter.png">
                 </li>
+                <li class="social-google-plus">
+                   <img src="img/email.png">
+                </li>
+                
             </ul>
         </div>
     </section>
 
+<!--
     <footer>
         <div class="container">
             <p>&copy; Yucen Zhang Made. All Rights Reserved.</p>
@@ -111,6 +116,7 @@
             </ul>
         </div>
     </footer>
+-->
 
     <!-- jQuery -->
     <script src="lib/jquery/jquery.min.js"></script>
@@ -122,7 +128,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/new-age.min.js"></script>
+    <script src="js/new-age.js"></script>
 
 </body>
 
