--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <head>
 
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>New Age - Start Bootstrap Theme</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Lucid</title>
+    <meta name="author" content="Lucid">
+    <meta name="description" content="Connecting fate through clear communication"/>
+    <meta name="keywords" content="Lucid,web,web application,development,ios,android,software"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta property="og:url" content="https://belucid.co"/>
+    <meta property="og:title" content="Lucid" />
+    <meta property="og:site_name" content="Lucid" />
+    <meta property="og:description" content="Connecting fate through clear communication" />
+    <meta property="og:image" content="https://belucid.co/img/fb-share-img.png" />
+    <meta property="fb:app_id" content="1692306757703263" />
 
     <!-- Bootstrap Core CSS -->
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -29,13 +35,6 @@
     
     <!--    font awesome-->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -82,18 +81,6 @@
                 </div>
                 <div class="col-sm-1"></div>
             </div>
-<!--
-            <div id="arrow">
-                    <a class="page-scroll" href="#contact">down</a>
-            </div>
--->
-<!--            <div class="arrow bounce">-->
-<!--                <a class="fa fa-arrow-down fa-2x" href="#"></a>-->
-<!--                <a class="page-scroll" href="#contant">Hello</a>-->
-<!--
-                <img src="img/Arrow.png">
-            </div>
--->
         </div>
     </header>
 
@@ -115,26 +102,9 @@
                 </li>    
             </ul>
         </div>
+        <p class="footerCopy">&copy; Lucid Communication, Inc.</p>
     </section>
 
-<!--
-    <footer>
-        <div class="container">
-            <p>&copy; Yucen Zhang Made. All Rights Reserved.</p>
-            <ul class="list-inline">
-                <li>
-                    <a href="#">Privacy</a>
-                </li>
-                <li>
-                    <a href="#">Terms</a>
-                </li>
-                <li>
-                    <a href="#">FAQ</a>
-                </li>
-            </ul>
-        </div>
-    </footer>
--->
 
     <!-- jQuery -->
     <script src="lib/jquery/jquery.min.js"></script>
