Added new assets

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="col-sm-6">
                     <div class="header-content">
                         <div id="logo" >
-                            <img id="logo_img" src="img/loginLogo.png"  alt="">
+                            <img id="logo_img" src="img/loginLogo.svg"  alt="Lucid">
                         </div>
                         <div id="explore" >
                             <h3>Explore What's Possible</h3>
@@ -69,13 +69,13 @@
                             <p>Anonymously like your friends, match when they like you back</p>
                         </div>
                         <div>
-                            <img id="apple_img" src="img/apple_badge.svg" alt="">
+                            <img id="apple_img" src="img/AppStoreButton.svg" alt="Get our IOS app">
                         </div>
                     </div>
                     
                     <div class="arrow bounce">
                         <a class="page-scroll" href="#contact">
-                            <img src="img/Arrow.png">
+                            <img src="img/Arrow.svg" alt="Scroll down">
                         </a>
                     </div>    
                 </div>
@@ -88,17 +88,17 @@
     <section id="contact" class="contact bg-primary">
         <div class="container" id="icons">
             <ul class="list-inline list-social">
-                <li class="social-twitter">
-                    <img src="img/instagram.png">
-                </li>
-                <li class="social-facebook">
-                    <img src="img/facebook.png">
+                <li class="social-google-plus">
+                    <img src="img/Instagram.svg" alt="instagram">
                 </li>
                 <li class="social-google-plus">
-                   <img src="img/twitter.png">
+                    <img src="img/Facebook.svg" alt="Facebook"> 
                 </li>
                 <li class="social-google-plus">
-                   <img src="img/email.png">
+                   <img src="img/Twitter.svg" alt="Twitter">
+                </li>
+                <li class="social-google-plus">
+                   <img src="img/Mail.svg" alt="Email us">
                 </li>    
             </ul>
         </div>
