--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
                                     <img src="img/screen.jpg" class="img-responsive" alt="">
                                 </div>
                                 <div class="button">
-                                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
                                 </div>
                             </div>
                         </div>
@@ -60,7 +59,7 @@
                 <div class="col-sm-6">
                     <div class="header-content">
                         <div id="logo" >
-                            <img id="logo_img" src="img/loginLogo.svg"  alt="Lucid">
+                            <img id="logo_img" src="img/lucidLogo.png"  alt="Lucid">
                         </div>
                         <div id="explore" >
                             <h3>Explore What's Possible</h3>
