--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Lucid</title>
     <meta name="author" content="Lucid">
-    <meta name="description" content="Connecting fate through clear communication"/>
+    <meta name="description" content="Explore what's possible"/>
     <meta name="keywords" content="Lucid,web,web application,development,ios,android,software"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta property="og:url" content="https://belucid.co"/>
+    <meta property="og:url" content="https://explorelucid.com"/>
     <meta property="og:title" content="Lucid" />
     <meta property="og:site_name" content="Lucid" />
-    <meta property="og:description" content="Connecting fate through clear communication" />
-    <meta property="og:image" content="https://belucid.co/img/fb-share-img.png" />
+    <meta property="og:description" content="Explore what's possible" />
+    <meta property="og:image" content="https://explorelucid.com/img/fb-share-img.png" />
     <meta property="fb:app_id" content="1692306757703263" />
 
     <!-- Bootstrap Core CSS -->
@@ -32,7 +32,7 @@
 
     <!-- Theme CSS -->
     <link href="css/new-age.css" rel="stylesheet">
-    
+
     <!--    font awesome-->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
@@ -46,20 +46,15 @@
                 <div class="col-sm-3" id="iphone">
                     <div class="device-container">
                         <div id="iphone_img" class="device-mockup iphone6_plus portrait white">
-                            <div class="device">
-                                <div class="screen">
-                                    <img src="img/screen.jpg" class="img-responsive" alt="">
-                                </div>
-                                <div class="button">
-                                </div>
-                            </div>
+                        <div class = "device" >
+                        </div >
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="header-content">
                         <div id="logo" >
-                            <img id="logo_img" src="img/lucidLogo.png"  alt="Lucid">
+                            <img id="logo_img" src="img/newtry.svg"  alt="Lucid">
                         </div>
                         <div id="explore" >
                             <h3>Explore What's Possible</h3>
@@ -71,12 +66,12 @@
                             <img id="apple_img" src="img/AppStoreButton.svg" alt="Get our IOS app">
                         </div>
                     </div>
-                    
+
                     <div class="arrow bounce">
                         <a class="page-scroll" href="#contact">
                             <img src="img/Arrow.svg" alt="Scroll down">
                         </a>
-                    </div>    
+                    </div>
                 </div>
                 <div class="col-sm-1"></div>
             </div>
@@ -91,17 +86,17 @@
                     <img src="img/Instagram.svg" alt="instagram">
                 </li>
                 <li class="social-google-plus">
-                    <img src="img/Facebook.svg" alt="Facebook"> 
+                    <img src="img/Facebook.svg" alt="Facebook">
                 </li>
                 <li class="social-google-plus">
                    <img src="img/Twitter.svg" alt="Twitter">
                 </li>
                 <li class="social-google-plus">
                    <img src="img/Mail.svg" alt="Email us">
-                </li>    
+                </li>
             </ul>
         </div>
-        <p class="footerCopy">&copy; Lucid Communication, Inc.</p>
+        <p class="footerCopy">&copy; 2017 Lucid Communication, Inc.</p>
     </section>
 
 
