--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
 
 <body id="top">
 
+	<img id="logo" src="images/lucidLogo.png" alt="Lucid" />
 	<!-- Header -->
 	<header id="header">
 		<div class="content">
-			<h2 id="title">Explore what's possible</h2>
-			<h2 id="subtitle">Date your friends</h2>
+			<p id="title">Explore what's possible</p>
+			<p id="subtitle">Date your friends</p>
 			<p class="bodyText">When the feeling is mutual, getting with the ones who <br> excite us should be simple. Anonymously like your <br> friends,
 				match if they like you back.</p>
-			<ul class="actions">
+			<ul class="appStoreButtons">
 				<li><a href="#"><img src="images/appStore.svg" alt="Get the app" /></a></li>
+				<li><p id="subText">Don't have an Iphone?</p></li>
 			</ul>
 		</div>
-		<div class="inner"><img src="images/appScreens.svg" alt="App demo" /></div>
+		<div class="inner"><img id="appScreenImage" src="images/appScreens.svg" alt="App demo" /></div>
 	</header>
 
 	<!-- Footer -->
