Added last bits to website for desktop size

--- a/index.html
+++ b/index.html
@@ -32,11 +32,17 @@
 				match if they like you back.</p>
 			<ul class="appStoreButtons">
 				<li><a href="#"><img src="images/appStore.svg" alt="Get the app" /></a></li>
-				<li><p id="subText">Don't have an Iphone?</p></li>
+				<li><a href="#"><p id="subText">Don't have an Iphone?</p></a></li>
 			</ul>
 		</div>
 		<div class="inner"><img id="appScreenImage" src="images/appScreens.svg" alt="App demo" /></div>
 	</header>
+
+	<div id="arrowDown" style="text-align: center;">
+		<a href="#footer">
+			<img src="images/arrow.svg" alt="Scroll down" />
+		</a>
+	</div>
 
 	<!-- Footer -->
 	<footer id="footer">
@@ -47,7 +53,7 @@
 			<li><a href="#"><img src="images/mail.svg" alt="Email"></a></li>
 		</ul>
 		<div class="footer-bottom-bar">
-			<p>&copy; 2017 </p>
+			<p>&copy; 2017 Lucid Communication, Inc. </p>
 		</div>
 	</footer>
 
