Modified frontpage for 1000 to 800 px

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
 <body id="top">
 
-	<img id="logo" src="images/lucidLogo.png" alt="Lucid" />
 	<!-- Header -->
 	<header id="header">
 		<div class="content">
+			<img id="logo" src="images/lucidLogo.png" alt="Lucid" />
 			<p id="title">Explore what's possible</p>
 			<p id="subtitle">Date your friends</p>
 			<p class="bodyText">When the feeling is mutual, getting with the ones who <br> excite us should be simple. Anonymously like your <br> friends,
 				match if they like you back.</p>
 			<ul class="appStoreButtons">
 				<li><a href="#"><img src="images/appStore.svg" alt="Get the app" /></a></li>
-				<li><a href="#"><p id="subText">Don't have an Iphone?</p></a></li>
+				<!--<li><a href="#"><p id="subText">Don't have an Iphone?</p></a></li>-->
 			</ul>
 		</div>
 		<div class="inner"><img id="appScreenImage" src="images/appScreens.svg" alt="App demo" /></div>
