changed image assets

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!--<li><a href="#"><p id="subText">Don't have an Iphone?</p></a></li>-->
 			</ul>
 		</div>
-		<div class="inner"><img id="appScreenImage" src="images/appScreens.svg" alt="App demo" /></div>
+		<div class="inner"><img id="appScreenImage" src="images/appScreens.png" alt="App demo" /></div>
 	</header>
 
 	<div id="arrowDown" style="text-align: center;">
