Rough version of mobile done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,12 +13,11 @@
 	<meta property="og:title" content="Lucid" />
 	<meta property="og:site_name" content="Lucid" />
 	<meta property="og:description" content="Explore what's possible" />
-	<meta property="og:image" content="https://explorelucid.com/img/fb-share-img.png" />
+	<meta property="og:image" content="https://explorelucid.com/images/fb-share-img.png" />
 	<meta property="fb:app_id" content="1692306757703263" />
-	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+
 </head>
 
 <body id="top">
@@ -25,20 +25,38 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="content">
-			<img id="logo" src="images/lucidLogo.png" alt="Lucid" />
-			<p id="title">Explore what's possible</p>
-			<p id="subtitle">Date your friends</p>
-			<p class="bodyText">When the feeling is mutual, getting with the ones who <br> excite us should be simple. Anonymously like your <br> friends,
-				match if they like you back.</p>
-			<ul class="appStoreButtons">
-				<li><a href="#"><img src="images/appStore.svg" alt="Get the app" /></a></li>
-				<!--<li><a href="#"><p id="subText">Don't have an Iphone?</p></a></li>-->
-			</ul>
+			<div class="hidesOnMobile">
+				<img id="logo" src="images/lucidLogo.png" alt="Lucid" />
+				<p id="title">Explore what's possible</p>
+				<p id="subtitle">Date your friends</p>
+				<p class="bodyText">When the feeling is mutual, getting with the ones who <br> excite us should be simple. Anonymously like your <br> friends,
+					match if they like you back.</p>
+				<ul class="appStoreButtons">
+					<li><a href="#"><img src="images/appStore.svg" alt="Get the app" /></a></li>
+					<!--<li><a href="#"><p id="subText">Don't have an Iphone?</p></a></li>-->
+				</ul>
+			</div>
+			<div class="displaysOnMobile">
+				<img id="mobileAppScreenImage" src="images/appScreens.png" alt="App demo" />
+			</div>
 		</div>
-		<div class="inner"><img id="appScreenImage" src="images/appScreens.png" alt="App demo" /></div>
+		<div class="inner">
+			<div class="displaysOnMobile">
+				<img id="logo" src="images/lucidLogo.png" alt="Lucid" />
+				<p id="title">Explore what's possible</p>
+				<p id="subtitle">Date your friends</p>
+				<p class="bodyText">When the feeling is mutual, getting with the ones who <br> excite us should be simple. Anonymously like your <br> friends,
+					match if they like you back.</p>
+				<ul class="appStoreButtons">
+					<li><a href="#"><img src="images/appStore.svg" alt="Get the app" /></a></li>
+					<!--<li><a href="#"><p id="subText">Don't have an Iphone?</p></a></li>-->
+				</ul>
+			</div>
+			<img class="hidesOnMobile" id="appScreenImage" src="images/appScreens.png" alt="App demo" />
+		</div>
 	</header>
 
-	<div id="arrowDown" style="text-align: center;">
+	<div class="hidesOnMobile" id="arrowDown" style="text-align: center;">
 		<a href="#footer">
 			<img src="images/arrow.svg" alt="Scroll down" />
 		</a>
@@ -47,10 +65,10 @@
 	<!-- Footer -->
 	<footer id="footer">
 		<ul class="icons">
-			<li><a href="#"><img src="images/instagram.svg" alt="Instagram"></a></li>
-			<li><a href="#"><img src="images/facebook.svg" alt="Facebook"></a></li>
-			<li><a href="#"><img src="images/twitter.svg" alt="Twitter"></a></li>
-			<li><a href="#"><img src="images/mail.svg" alt="Email"></a></li>
+			<li><a href="http://instagram.com/explorelucid"><img src="images/instagram.svg" alt="Instagram"></a></li>
+			<li><a href="https://www.facebook.com/ExploreLucid/"><img src="images/facebook.svg" alt="Facebook"></a></li>
+			<li><a href="https://twitter.com/ExploreLucid"><img src="images/twitter.svg" alt="Twitter"></a></li>
+			<!--<li><a href="#"><img src="images/mail.svg" alt="Email"></a></li>-->
 		</ul>
 		<div class="footer-bottom-bar">
 			<p>&copy; 2017 Lucid Communication, Inc. </p>
