--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<p class="bodyText">When the feeling is mutual, getting with the ones who <br> excite us should be simple. Anonymously like your <br> friends,
 					match if they like you back.</p>
 				<ul class="appStoreButtons">
-					<li><a href="#"><img src="images/appStore.svg" alt="Get the app" /></a></li>
+					<li><a href="#"><img id="mobileAppStoreButton" src="images/appStore.svg" alt="Get the app" /></a></li>
 					<!--<li><a href="#"><p id="subText">Don't have an Iphone?</p></a></li>-->
 				</ul>
 			</div>
@@ -65,9 +65,9 @@
 	<!-- Footer -->
 	<footer id="footer">
 		<ul class="icons">
-			<li><a href="http://instagram.com/explorelucid"><img src="images/instagram.svg" alt="Instagram"></a></li>
-			<li><a href="https://www.facebook.com/ExploreLucid/"><img src="images/facebook.svg" alt="Facebook"></a></li>
-			<li><a href="https://twitter.com/ExploreLucid"><img src="images/twitter.svg" alt="Twitter"></a></li>
+			<li><a href="http://instagram.com/explorelucid"><img class="socialMediaLogos" src="images/instagramLogo.png" alt="Instagram"></a></li>
+			<li><a href="https://www.facebook.com/ExploreLucid/"><img class="socialMediaLogos" src="images/facebookLogo.png" alt="Facebook"></a></li>
+			<li><a href="https://twitter.com/ExploreLucid"><img class="socialMediaLogos" src="images/twitterLogo.png" alt="Twitter"></a></li>
 			<!--<li><a href="#"><img src="images/mail.svg" alt="Email"></a></li>-->
 		</ul>
 		<div class="footer-bottom-bar">
