Added new appstore button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<p class="bodyText">When the feeling is mutual, getting with the ones who <br> excite us should be simple. Anonymously like your <br> friends,
 					match if they like you back.</p>
 				<ul class="appStoreButtons">
-					<li><a href="#"><img class="appStoreButton" src="images/appStore.svg" alt="Get the app" /></a></li>
+					<li><a href="#"><img class="appStoreButton" src="images/appStore.png" alt="Get the app" /></a></li>
 					<!--<li><a href="#"><p id="subText">Don't have an Iphone?</p></a></li>-->
 				</ul>
 			</div>
@@ -48,7 +48,7 @@
 				<p class="bodyText">When the feeling is mutual, getting with the ones who <br> excite us should be simple. Anonymously like your <br> friends,
 					match if they like you back.</p>
 				<ul class="appStoreButtons">
-					<li><a href="#"><img id="mobileAppStoreButton" src="images/appStore.svg" alt="Get the app" /></a></li>
+					<li><a href="#"><img id="mobileAppStoreButton" src="images/appStore.png" alt="Get the app" /></a></li>
 					<!--<li><a href="#"><p id="subText">Don't have an Iphone?</p></a></li>-->
 				</ul>
 			</div>
